--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=graniteexpo
+
+spring.datasource.url=jdbc:postgresql://db.kqigqrcvgjpvmuuivnuj.supabase.co:5432/postgres?sslmode=require
+
+
+spring.datasource.username=postgres
+spring.datasource.password=Afiyakhalid@supabase
+
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
